[gd_scene format=3 uid="uid://sybaasdpldn"]

[ext_resource type="Texture2D" uid="uid://qqvm6wr8myc0" path="res://assets/buttons/intake_button.png" id="1_4h43x"]
[ext_resource type="Script" uid="uid://cuksu34wxlhd5" path="res://game/ui/screen_menu_bar.gd" id="1_xi1fy"]
[ext_resource type="Texture2D" uid="uid://byssy7m3qiyox" path="res://assets/buttons/dockyard_button.png" id="2_yc0s6"]
[ext_resource type="Texture2D" uid="uid://duse45b660xw4" path="res://assets/buttons/smeltyard_button.png" id="3_xi1fy"]
[ext_resource type="Texture2D" uid="uid://dn4unhjpcr7bv" path="res://assets/buttons/exit_button.png" id="4_yuwud"]
[ext_resource type="Texture2D" uid="uid://4klmavxu7beq" path="res://assets/buttons/market_button.png" id="5_yuwud"]

[node name="ScreenMenuBar" type="MarginContainer" unique_id=1034205893]
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_bottom = 16
script = ExtResource("1_xi1fy")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1113829938]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 16

[node name="IntakeButton" type="TextureButton" parent="HBoxContainer" unique_id=1937623521]
layout_mode = 2
texture_normal = ExtResource("1_4h43x")

[node name="DockYardButton" type="TextureButton" parent="HBoxContainer" unique_id=184092149]
layout_mode = 2
texture_normal = ExtResource("2_yc0s6")

[node name="SmeltYardButton" type="TextureButton" parent="HBoxContainer" unique_id=135859284]
layout_mode = 2
texture_normal = ExtResource("3_xi1fy")

[node name="MarketButton" type="TextureButton" parent="HBoxContainer" unique_id=1479953133]
layout_mode = 2
texture_normal = ExtResource("5_yuwud")

[node name="Spacer" type="Control" parent="HBoxContainer" unique_id=1336365234]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer" unique_id=1979486760]
layout_mode = 2
texture_normal = ExtResource("4_yuwud")

[connection signal="pressed" from="HBoxContainer/IntakeButton" to="." method="_on_intake_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DockYardButton" to="." method="_on_dock_yard_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SmeltYardButton" to="." method="_on_smelt_yard_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarketButton" to="." method="_on_market_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
